--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "wrangler deploy"
   },
   "keywords": ["cloudflare", "workers", "html", "preview"],
-  "author": "Your Name",
+  "author": "xiyewuqiu",
   "license": "MIT",
   "devDependencies": {
     "wrangler": "^3.0.0"
